log auth header on development app startup
